    - post_update behavior improved; does a better job at not 
    updating too many rows, updates only required columns
    [ticket:208]
    - adjustments to eager loading so that its "eager chain" is
    kept separate from the normal mapper setup, thereby
    preventing conflicts with lazy loader operation, fixes 
    [ticket:308]
    - fix to deferred group loading
    - added "batch=True" flag to mapper; if False, save_obj
    will fully save one object at a time including calls
    to before_XXXX and after_XXXX
    - added "column_prefix=None" argument to mapper; prepends the
    given string (typically '_') to column-based attributes automatically
    set up from the mapper's Table
    - specifying joins in the from_obj argument of query.select() will
    replace the main table of the query, if the table is somewhere within
    the given from_obj.  this makes it possible to produce custom joins and
    outerjoins in queries without the main table getting added twice.
    [ticket:315]
    - eagerloading is adjusted to more thoughtfully attach its LEFT OUTER JOINs
    to the given query, looking for custom "FROM" clauses that may have 
    already been set up.
    - added join_to and outerjoin_to transformative methods to SelectResults,
    to build up join/outerjoin conditions based on property names. also
    added select_from to explicitly set from_obj parameter.
    - removed "is_primary" flag from mapper.

0.2.8
- cleanup on connection methods + documentation.  custom DBAPI
arguments specified in query string, 'connect_args' argument
to 'create_engine', or custom creation function via 'creator'
function to 'create_engine'.
- added "recycle" argument to Pool, is "pool_recycle" on create_engine,
defaults to 3600 seconds; connections after this age will be closed and
replaced with a new one, to handle db's that automatically close 
stale connections [ticket:274]
- changed "invalidate" semantics with pooled connection; will 